// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when the teamView component has an active Team should not show options to deactivate if the user does not have DEACTIVATE_TEAM role 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class=""
        >
          Team: __teamName__
        </span>
        <span />
      </h2>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: __unit1__
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <table
          class="govuk-table"
        >
          <thead
            class="govuk-table__head"
          >
            <tr
              class="govuk-table__row"
            >
              <th
                class="govuk-table__header"
                scope="col"
              >
                Team members
              </th>
              <th
                class="govuk-table__header"
                scope="col"
              >
                Action
              </th>
            </tr>
          </thead>
          <tbody
            class="govuk-table__body"
          >
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user1__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user2__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
      <button
        class="govuk-button govuk-button--secondary govuk-!-margin-right-1"
        data-module="govuk-button"
        type="submit"
      >
        Edit Team
      </button>
    </div>
  </div>
</div>
`;

exports[`when the teamView component has an active Team should show options to deactivate if the user has DEACTIVATE_TEAM role 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class=""
        >
          Team: __teamName__
        </span>
        <span />
      </h2>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: __unit1__
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <table
          class="govuk-table"
        >
          <thead
            class="govuk-table__head"
          >
            <tr
              class="govuk-table__row"
            >
              <th
                class="govuk-table__header"
                scope="col"
              >
                Team members
              </th>
              <th
                class="govuk-table__header"
                scope="col"
              >
                Action
              </th>
            </tr>
          </thead>
          <tbody
            class="govuk-table__body"
          >
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user1__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user2__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
      <button
        class="govuk-button govuk-button--secondary govuk-!-margin-right-1"
        data-module="govuk-button"
        type="submit"
      >
        Edit Team
      </button>
      <button
        class="govuk-button govuk-button--secondary"
        type="submit"
      >
        Deactivate team
      </button>
    </div>
  </div>
</div>
`;

exports[`when the teamView component has an inactive Team should not show options to reactivate if the user does not have ACTIVATE_TEAM role 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class="govuk-grid-column-three-quarters"
        >
          Team: __teamName__
        </span>
        <span>
          <strong
            class="govuk-tag govuk-tag--grey"
          >
            Inactive
          </strong>
        </span>
      </h2>
      <p
        class="govuk-inset-text"
      >
        <p
          class="govuk-heading-s"
        >
          This team is inactive
        </p>
        <p>
          New cases cannot be assigned to 
          __teamName__
          . You can still assign members to this team to view and process existing cases.
        </p>
        <p />
      </p>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: __unit1__
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <table
          class="govuk-table"
        >
          <thead
            class="govuk-table__head"
          >
            <tr
              class="govuk-table__row"
            >
              <th
                class="govuk-table__header"
                scope="col"
              >
                Team members
              </th>
              <th
                class="govuk-table__header"
                scope="col"
              >
                Action
              </th>
            </tr>
          </thead>
          <tbody
            class="govuk-table__body"
          >
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user1__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user2__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
      <button
        class="govuk-button govuk-button--secondary govuk-!-margin-right-1"
        data-module="govuk-button"
        type="submit"
      >
        Edit Team
      </button>
    </div>
  </div>
</div>
`;

exports[`when the teamView component has an inactive Team should show options to reactivate if the user has ACTIVATE_TEAM role 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class="govuk-grid-column-three-quarters"
        >
          Team: __teamName__
        </span>
        <span>
          <strong
            class="govuk-tag govuk-tag--grey"
          >
            Inactive
          </strong>
        </span>
      </h2>
      <p
        class="govuk-inset-text"
      >
        <p
          class="govuk-heading-s"
        >
          This team is inactive
        </p>
        <p>
          New cases cannot be assigned to 
          __teamName__
          . You can still assign members to this team to view and process existing cases.
        </p>
        <p>
          <a
            class="govuk-link"
            href="/team/__teamId__/reactivate"
            type="submit"
          >
            Reactivate team
          </a>
        </p>
      </p>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: __unit1__
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <table
          class="govuk-table"
        >
          <thead
            class="govuk-table__head"
          >
            <tr
              class="govuk-table__row"
            >
              <th
                class="govuk-table__header"
                scope="col"
              >
                Team members
              </th>
              <th
                class="govuk-table__header"
                scope="col"
              >
                Action
              </th>
            </tr>
          </thead>
          <tbody
            class="govuk-table__body"
          >
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user1__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user2__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
      <button
        class="govuk-button govuk-button--secondary govuk-!-margin-right-1"
        data-module="govuk-button"
        type="submit"
      >
        Edit Team
      </button>
      <button
        class="govuk-button govuk-button--secondary"
        type="submit"
      >
        Reactivate team
      </button>
    </div>
  </div>
</div>
`;

exports[`when the teamView component is mounted with RENAME_TEAM role should render with default props 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class="govuk-grid-column-three-quarters"
        >
          Team: 
        </span>
        <span>
          <strong
            class="govuk-tag govuk-tag--grey"
          >
            Inactive
          </strong>
        </span>
      </h2>
      <p
        class="govuk-inset-text"
      >
        <p
          class="govuk-heading-s"
        >
          This team is inactive
        </p>
        <p>
          New cases cannot be assigned to 
          . You can still assign members to this team to view and process existing cases.
        </p>
        <p />
      </p>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: undefined
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <p
          class="govuk-body"
        >
          Loading...
        </p>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
      <button
        class="govuk-button govuk-button--secondary govuk-!-margin-right-1"
        data-module="govuk-button"
        type="submit"
      >
        Edit Team
      </button>
    </div>
  </div>
</div>
`;

exports[`when the teamView component is mounted without RENAME_TEAM role should render with default props 1`] = `
<div>
  <div
    class="govuk-form-group"
  >
    <a
      class="govuk-back-link"
      href="/team-search"
    >
      Back
    </a>
    <div>
      <h1
        class="govuk-heading-xl"
      >
        Manage Team
      </h1>
      <h2
        class="govuk-heading-l"
      >
        <span
          class=""
        >
          Team: __teamName__
        </span>
        <span />
      </h2>
      <h2
        class="govuk-heading-m govuk"
      >
        Unit: __unit1__
      </h2>
      <h3
        class="govuk-heading-l"
      >
        View and remove team members
      </h3>
      <div>
        <table
          class="govuk-table"
        >
          <thead
            class="govuk-table__head"
          >
            <tr
              class="govuk-table__row"
            >
              <th
                class="govuk-table__header"
                scope="col"
              >
                Team members
              </th>
              <th
                class="govuk-table__header"
                scope="col"
              >
                Action
              </th>
            </tr>
          </thead>
          <tbody
            class="govuk-table__body"
          >
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user1__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
            <tr
              class="govuk-table__row"
            >
              <td
                class="govuk-table__cell"
              >
                __user2__
              </td>
              <td
                class="govuk-table__cell"
              >
                <a
                  href="#"
                >
                  Remove
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <button
        class="govuk-button govuk-!-margin-right-1 add-team-members-button"
        data-module="govuk-button"
        type="submit"
      >
        Add team members
      </button>
      <button
        class="govuk-button govuk-!-margin-right-1 govuk-button--secondary manage-nominated-contacts-button"
        data-module="govuk-button"
        type="submit"
      >
        Manage nominated contacts
      </button>
    </div>
  </div>
</div>
`;
